--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<h1>Junu Gurung</h1>
-	<h2>Front end developer</h2>
-
-	<p>bla bla bla bla bla</p>
+	<div class="about">
+		<img src="images/junu.jpg" class="img" />
+		<h1>Junu Gurung</h1>
+		<h2>Front end developer</h2>
+		<hr class="horizontal" />
+		<p class="bio">Lorem Ipsum is simply dummy text of the printing and typesetting industry.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	</div>
 </body>
 </html>
