--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="prism/prism-atom-dark.css">
 	<script type="text/javascript" src="prism/prism.ruby.js" ></script>
 	<script type="text/javascript" src="prism/prism.js"></script>
@@ -170,10 +171,10 @@
 	</div>
 	<br class="clear" /> -->
 	<div class="slant-container">
-		<div class="slant">Hey, I'm from Nepal,located in the Great Himalayan Range. Recently I moved to Boston by myself. And I'm tackling with the challanges of life along with coding. 
+		<!--<div class="slant">Hey, I'm from Nepal,located in the Great Himalayan Range. Recently I moved to Boston by myself. And I'm tackling with the challanges of life along with coding. 
 		Life is alwaysthere to throw alots of surprising shades of ups & down. 
 		I Would be happily speaking "Hashtag #challangAccepted."
-	</div>
+	</div> -->
 
 	<h3 id="my-skills">Skills &amp; Tools</h3>
 	<hr class="horizontal-second" />
@@ -191,14 +192,17 @@
 		<h1 class="contact-headline">Contact</h1>
 		<hr class="horizontal-second" />
 		<p class="contact-info">
-	    Currently entertaining new opportunities.
-	    Please get in touch via email:
+	    Currently searching for new adventures.
+	    Lets talk. Please get in touch via email:
 	  </p>
+	 <div class="social-container">
+	   <!--<p><a href="mailto:junugurung48@gmail.com" class="contact-link"><i class="fa fa-envelope-square"></i></a></p>
+	  <p><a href="https://www.linkedin.com/in/junu-gurung" class="contact-link"<i class="social-icon fa fa-linkedin fa-4x" aria-hidden="true"></i></p> -->
 	  <p><a href="mailto:junugurung48@gmail.com" class="contact-link">
 	  	junugurung48@gmail.com
 	  </a></p>
+	 </div>
 		
 	</div>
-
 </body>
 </html>
