--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<li><a href="#code-snippet" class="nav-link">CODE SAMPLES</a></li>
 			<li><a href="#web-apps" class="nav-link">WEB APPS</a></li>
 			<li><a href="#my-skills" class="nav-link">SKILLS</a></li>
-			<li><a href="blog.html" class="nav-link">BLOG</a></li>
+		<!--	<li><a href="blog.html" class="nav-link">BLOG</a></li> -->
 			<li class="hire-me"><a href="#contact-me" class="nav-link">HIRE ME</a></li>	
 		</ul>
 		<div class="about">
