added project landing pages and styled

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="prism/prism.js"></script>
 	<title>Junu Gurung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" name="description" content="Highly motivated, passionate, multilingual web developer who works well both independently and as part of a team, looking to be impactful at a growing company. My key technical skills include Ruby on Rails, Git, JavaScript, and Heroku.">
+	<link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 	
 	
 </head>
@@ -116,21 +117,29 @@
 	<hr class="horizontal-second" />
 	<div class="box">
 		<h4>Pinteresting app</h4>
-		<img src="images/pinterest.jpg" class="full-width" />
+		<img src="images/pinterest.jpg" class="full-width" style="height: 390px;" />
 		 <p>
         	Build on Ruby on Rails. PostgreSql database was used integrating many gems to make this app more dynamic and usable.
   		</p>
 	</div>
 	<div class="box">
-  <h4>Yelp Clone</h4>
-  <img src="images/lights.jpg" class="full-width" />
+  <h4>SI Expo Talent</h4>
+  <a href="http://junugurung.getforge.io/" target="_"><img src="images/si-talent.jpg" class="full-width" /></a>
   <p>
-    A Yelp clone that integrates with the Google Maps API 
-    and includes features like user comments, star ratings,
-    image uploading, and user authentication.
+    SI Expo Talent site gives the information about SI Expo Talent location, date and time 
   </p>
 	</div>
 	<br class="clear" />
+
+	<div class="genians">
+		<img src="genians/geni-screenshot.jpg" class="geni-img">
+		<div class="genians-inner">
+			<h1 style="color: white;">Landing Page of Partner Project.</h1>
+			<h4>Built on HTML & CSS</h4>
+			<a href="genians.html" target="_blank" class="genians-view">Full View</a>
+		</div>
+	</div>
+	<br class="clear"/>
 
 <!--	<div class="box">
 	  <h4>Two-Sided Market Place</h4>
@@ -171,6 +180,11 @@
 	  </p>
 	</div>
 	<br class="clear" /> -->
+
+
+
+
+
 	<div class="slant-container">
 		<!--<div class="slant">Hey, I'm from Nepal,located in the Great Himalayan Range. Recently I moved to Boston by myself. And I'm tackling with the challanges of life along with coding. 
 		Life is alwaysthere to throw alots of surprising shades of ups & down. 
