jquery added for skills

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<title>Junu Gurung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" name="description" content="Highly motivated, passionate, multilingual web developer who works well both independently and as part of a team, looking to be impactful at a growing company. My key technical skills include Ruby on Rails, Git, JavaScript, and Heroku.">
 	<link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles-jquery.css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	
 	
 </head>
@@ -26,7 +28,7 @@
 		</ul>
 		<div class="about">
 			<img src="images/junu.jpg" class="img" />
-			<h1 class="animated fadeInDownBig">Junu Gurung</h1>
+			<h1 class="animated fadeInDownBig name">Junu Gurung</h1>
 			<h2 class="animated bounceInUp">Front end developer</h2>
 			<hr class="horizontal-first" />
 			<p class="bio animated swing">
@@ -185,13 +187,14 @@
 
 
 
-	<div class="slant-container">
-		<!--<div class="slant">Hey, I'm from Nepal,located in the Great Himalayan Range. Recently I moved to Boston by myself. And I'm tackling with the challanges of life along with coding. 
+	<!-- <div class="slant-container">
+		<div class="slant">Hey, I'm from Nepal,located in the Great Himalayan Range. Recently I moved to Boston by myself. And I'm tackling with the challanges of life along with coding. 
 		Life is alwaysthere to throw alots of surprising shades of ups & down. 
 		I Would be happily speaking "Hashtag #challangAccepted."
-	</div> -->
+	</div> 
+ -->
 
-	<h3 id="my-skills">Skills &amp; Tools</h3>
+	<!-- <h3 id="my-skills">Skills &amp; Tools</h3>
 	<hr class="horizontal-second" />
 
 	<p class="skill-tool">
@@ -202,7 +205,34 @@
 		
 		<br class="clear"/>
 		<img src="skills/skills.png" class="icon"/>
-	</div>
+	</div> -->
+
+<section class="skill-container">
+        <h1 class="page-title">Skills & Tools</h1>
+        <div class="circles">
+            <div class="first circle">
+                <strong></strong>
+                <span> HTML</span>
+            </div>
+            <div class="second circle">
+                <strong></strong>
+                <span> CSS</span>
+            </div>
+            <div class="third circle">
+                <strong></strong>
+                <span> Javascript</span>
+            </div>
+            <div class="forth circle">
+                <strong></strong>
+                <span> PHP</span>
+            </div>
+            <div class="fifth circle">
+                <strong></strong>
+                <span> Ruby on Rails</span>
+            </div>
+        </div>
+    </section>
+
 	<div id="contact-me" class="contact-me">
 		<h1 class="contact-headline">Contact</h1>
 		<hr class="horizontal-second" />
@@ -219,5 +249,9 @@
 	 </div>
 		
 	</div>
+
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/kottenator/jquery-circle-progress/1.2.0/dist/circle-progress.js"></script>
+    <script src="css/script-jquery.js"></script>
 </body>
 </html>
