--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="prism/prism-atom-dark.css">
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="prism/prism.js"></script>
 	<title>Junu Gurung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" name="description" content="Highly motivated, passionate, multilingual web developer who works well both independently and as part of a team, looking to be impactful at a growing company. My key technical skills include Ruby on Rails, Git, JavaScript, and Heroku.">
-	<link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles-jquery.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	
@@ -242,7 +242,7 @@
 	  </p>
 	 <div class="social-container">
 	   <!--<p><a href="mailto:junugurung48@gmail.com" class="contact-link"><i class="fa fa-envelope-square"></i></a></p>
-	  <p><a href="https://www.linkedin.com/in/junu-gurung" class="contact-link"<i class="social-icon fa fa-linkedin fa-4x" aria-hidden="true"></i></p> -->
+	  <p><a href="http://www.linkedin.com/in/junu-gurung" class="contact-link"<i class="social-icon fa fa-linkedin fa-4x" aria-hidden="true"></i></p> -->
 	  <p><a href="mailto:junugurung48@gmail.com" class="contact-link">
 	  	junugurung48@gmail.com
 	  </a></p>
@@ -250,8 +250,8 @@
 		
 	</div>
 
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/kottenator/jquery-circle-progress/1.2.0/dist/circle-progress.js"></script>
+	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="http://cdn.rawgit.com/kottenator/jquery-circle-progress/1.2.0/dist/circle-progress.js"></script>
     <script src="css/script-jquery.js"></script>
 </body>
 </html>
