skills id added

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		<img src="skills/skills.png" class="icon"/>
 	</div> -->
 
-<section class="skill-container">
+<section id="my-skills" class="skill-container">
         <h1 class="page-title">Skills & Tools</h1>
         <div class="circles">
             <div class="first circle">
