genianslanding page added

--- a/junu-github.html
+++ b/junu-github.html
@@ -207,6 +207,31 @@
 		<img src="skills/skills.png" class="icon"/>
 	</div> -->
 
+<section id="my-skills" class="skill-container">
+        <h1 class="page-title">Skills & Tools</h1>
+        <div class="circles">
+            <div class="first circle">
+                <strong></strong>
+                <span> HTML</span>
+            </div>
+            <div class="second circle">
+                <strong></strong>
+                <span> CSS</span>
+            </div>
+            <div class="third circle">
+                <strong></strong>
+                <span> Javascript</span>
+            </div>
+            <div class="forth circle">
+                <strong></strong>
+                <span> PHP</span>
+            </div>
+            <div class="fifth circle">
+                <strong></strong>
+                <span> Ruby on Rails</span>
+            </div>
+        </div>
+    </section>
 
 	<div id="contact-me" class="contact-me">
 		<h1 class="contact-headline">Contact</h1>
@@ -215,7 +240,26 @@
 	    Currently looking for new adventures.
 	    Lets get in touch via email or find me on social media.
 	  </p>
-	
+	 <div class="social-container">
+	  <!--  <p><a href="mailto:junugurung48@gmail.com" class="contact-link"><i class="fa fa-envelope-square"></i></a></p>
+	  <p><a href="https://www.linkedin.com/in/junu-gurung" class="contact-link"<i class="social-icon fa fa-linkedin fa-4x" aria-hidden="true"></i></p> 
+
+	  <p><a href="mailto:junugurung48@gmail.com" class="contact-link">
+	  	junugurung48@gmail.com
+	  </a></p> -->
+	  <a id="social-icon" href="mailto:junugurung48@gmail.com" target="_blank"><i class="fa fa-envelope fa-3x contact-link" aria-hidden="true"></i></a>
+	  <a id="social-icon" href="https://www.linkedin.com/in/junu-gurung" target="_blank"><i class="fa fa-linkedin-square fa-3x contact-link" aria-hidden="true"></i></a>
+	  <a id="social-icon" href="https://github.com/JunuGurung" target="_blank"><i class="fa fa-github-square fa-3x contact-link" aria-hidden="true"></i></a>
+	  <a id="social-icon" href="https://twitter.com/JunuGurungB" target="_blank"><i class="fa fa-twitter-square fa-3x contact-link" aria-hidden="true"></i></a>
+	  <a id="social-icon" href="https://angel.co/junu-gurung" target="_blank"><i class="fa fa-angellist fa-3x contact-link" aria-hidden="true"></i></a>
+
+	 </div>
+	 <div class="clear copyright">
+	 	 Copyright © Junu Gurung 2016
+	 </div>
+		
+	</div>
+
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/kottenator/jquery-circle-progress/1.2.0/dist/circle-progress.js"></script>
     <script src="css/script-jquery.js"></script>
